# Tutoring-Agent

./: .env  pyproject.toml  requirements.txt  vercel.json
src/: run_voice_app.py  test_vector_db_system.py
src/api/: main.py
src/api/routes/: agent_routes.py  evaluator_routes.py  quiz_routes.py  voice_routes.py
src/math_tutoring_agent/: __init__.py  orchestrator_agent.py
src/math_tutoring_agent/database/: vector_store.py
src/math_tutoring_agent/math_agents/: class10_agent.py  class11_agent.py  class12_agent.py  class9_agent.py
src/math_tutoring_agent/quiz_generator/: common_analyzer.py  complete_output_generator.py
src/math_tutoring_agent/utils/: paper_uploader.py
src/quiz_agent/: checking.py  master_quiz_agent.py  quiz_agent.py
src/quiz_agent/class_09/: class_09_Master_quiz_agent.py
src/quiz_agent/class_09/Config/: config.py
src/quiz_agent/class_09/biology_quiz_system/: bio_quiz_agent.py
src/quiz_agent/class_09/chemistry_quiz_system/: chemistry_quiz_agent.py
src/quiz_agent/class_09/computer_quiz_system/: computer_quiz_agent.py
src/quiz_agent/class_09/english_quiz_system/: english_quiz_agent.py
src/quiz_agent/class_09/math_quiz_system/: math_quiz_agent.py
src/quiz_agent/class_09/physics_quiz_system/: physics_quiz_agent.py
src/quiz_agent/class_10/: __init__.py  class_10_Master_quiz_agent.py
src/quiz_agent/class_10/biology_agent_10/: bio_quiz_agent.py
src/quiz_agent/past_papers/: 2024_questions_math.json
src/test_evaluator/: test_eval.py
src/utils/: voice_utils.py
src/web/static/css/: style.css
src/web/templates/: index.html
(+37 files in other folders)
